--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-dom": "^16.5.2",
     "react-icons": "^3.7.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.4",
+    "react-scripts": "^3.0.1",
     "styled-components": "^4.3.2"
   },
   "scripts": {
