--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "2.0.4",
     "react-spinners-kit": "^1.9.0",
+    "serialize-javascript": "^2.1.1",
     "styled-components": "^4.3.2"
   },
   "scripts": {
